# KongFuChess

./: .gitignore  README.md  setup.py
KFC_Cpp/: CMakeLists.txt
KFC_Cpp/src/: Board.cpp  Board.hpp  Command.hpp  Common.hpp  Game.hpp  Graphics.cpp  Graphics.hpp  GraphicsFactory.hpp  KeyboardProcessor.hpp  KeyboardProducer.hpp  Moves.cpp  Moves.hpp  Physics.hpp  PhysicsFactory.hpp  Piece.hpp  PieceFactory.hpp  State.hpp  main.cpp
KFC_Cpp/src/img/: Img.hpp  ImgFactory.hpp  MockImg.hpp  OpenCvImg.cpp  OpenCvImg.hpp
KFC_Cpp/tests/: BoardTests.cpp  FactoryTests.cpp  GameFullPlayTests.cpp  GraphicsTests.cpp  KeyboardProcessorTests.cpp  MovesTests.cpp  NeedClearPathTests.cpp  PhysicsStateTests.cpp  PieceStateTests.cpp  TestMain.cpp
KFC_Py/: Board.py  Command.py  Game.py  GameFactory.py  Graphics.py  GraphicsFactory.py  KeyboardInput.py  Moves.py  Physics.py  PhysicsFactory.py  Piece.py  PieceFactory.py  State.py  __init__.py  img.py  main.py  mock_img.py
KFC_Py/Tests/: __init__.py  test_factories.py  test_game_factory.py  test_game_full_play.py  test_graphics_and_moves.py  test_integration.py  test_keyboard_processor.py  test_keyboard_threadsafe.py  test_moves_board_img.py  test_physics_state.py  test_piece_state_game.py
pieces/BB/states/idle/: moves.txt
pieces/PB/states/move/: config.json
pieces/QW/states/idle/: moves.txt
